Rework ES/RHEL/CentOS doc (#759)

--- a/branding/pdf/entities.adoc
+++ b/branding/pdf/entities.adoc
@@ -7,10 +7,15 @@
 :ipf : Itanium
 :x86: x86
 :x86_64: x86_64
+:centos: CentOS
+:redhat: Red Hat
 :rhel: Red Hat Enterprise Linux
+:rhela: RHEL
 :rhnminrelease6: Red Hat Enterprise Linux Server 6
 :rhnminrelease7: Red Hat Enterprise Linux Server 7
 :ubuntu: Ubuntu
+:opensuse: openSUSE
+:centos: CentOS
 :kickstart: Kickstart
 :productname:
 :productproxy: {productname} Proxy
@@ -31,6 +36,8 @@
 :scc: SUSE Customer Center
 :sls: SUSE Linux Enterprise Server
 :sle: SUSE Linux Enterprise
+:sleses: SUSE Linux Enterprise Server with Expanded Support
+:slesesa: Expanded Support
 :slsa: SLES
 :suse: SUSE
 :slea: SLE
@@ -43,7 +50,6 @@
 :rootuser: root
 :ruser: root
 :mdash: -
-:rhela: RHEL
 :mgradvtop: Advanced Topics Guide
 :mgrgetstart: Getting Started Guide
 :mgrrefguide: Reference Guide
