--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -18,6 +18,7 @@ ifndef::backend-pdf[]
 *** xref:cobbler.adoc[Cobbler]
 // Non-SUSE Clients
 ** xref:non-suse-clients.adoc[Other Clients]
+*** xref:clients-sleses.adoc[Expanded Support Clients]
 *** xref:clients-rh.adoc[Red Hat Clients]
 *** xref:clients-centos.adoc[CentOS Clients]
 *** xref:clients-ubuntu.adoc[Ubuntu Clients]
@@ -86,6 +87,8 @@ include::modules/client-configuration/pages/cobbler.adoc[leveloffset=+2]
 // Non-SUSE Clients
 
 include::modules/client-configuration/pages/non-suse-clients.adoc[leveloffset=+1]
+
+include::modules/client-configuration/pages/clients-sleses.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/clients-rh.adoc[leveloffset=+2]
 
