--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -18,7 +18,7 @@ ifndef::backend-pdf[]
 // Public Cloud
 ** xref:public-cloud.adoc[Public Cloud]
 // *** xref:public-cloud-azure.adoc[]
-*** xref:disconnected-setup.adoc[Disconnected Setup]
+** xref:disconnected-setup.adoc[Disconnected Setup]
 // ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
 ** Security
