--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -4,7 +4,10 @@
 
 This table lists the availability of various features on {ubuntu} clients.
 
-Note that Debian is not currently supported by {suse}.
+[NOTE]
+====
+ Debian is not currently supported by {suse}.
+====
 
 The icons in this table indicate:
 
